--- a/css/styles.css
+++ b/css/styles.css
@@ -510,6 +510,96 @@ Sempre que alguem passar o mause vou estilizar o pararagrafo que esta dentro*/
     #call-area p, #call-area #call-btn {
         font-size: 16px;
     }
+}
 
+/*Responsivo celulares*/
+@media(max-width: 425px){
+    
+    /*Slider*/
+    #mainSlider {
+        margin-top: 90px;
+    }
+
+    #mainSlider .carousel-caption {
+        top: 5%;
+    }
+
+    #mainSlider .carousel-caption h2 {
+        font-size: 16px;
+         margin-bottom: 40px;  
+    }
+
+    #mainSlider .carousel-caption p {
+        display: none;
+    }
+
+    .carousel-caption .main-btn {
+        font-size: 14px;
+    }
+
+    /* about */
+
+    .main-title {
+        font-size: 30px;
+    }
+
+    #about-area img {
+        margin-top: 0;
+        margin-bottom: 30px;
+    }
+
+    /* data */
+    .circle-box {
+        width: 50%;
+    }
+
+    /* team */
+    #team-area .col-md-3 {
+        width: 50%;
+        margin-bottom: 30px;/*espaçamento de um retrato para o outro*/
+    }
+
+    /* apply */
+    #apply-area {
+        height: auto;
+    }
+
+    #company-img {
+        display: none;
+    }
+
+    /* filter */
+    #portfolio-area .filter-btn {
+        margin-bottom: 20px;
+    }
+    .project-box {
+        width: 50%;
+    }
+
+    /* news */
+    #news-area .main-title {
+        font-size: 24px;
+    }
+
+    #news-area p {
+        font-size: 16px;
+    }
+
+    #email-input {
+        width: 80%;
+    }
+
+    /* cta*/
+    #call-area p, #call-area #call-btn {
+        font-size: 14px;
+        letter-spacing: 0;
+        margin: 0;
+        width: 50%;
+    }
+    /* contact*/
+    .contact-box {
+        border: none;
+        margin-bottom: 0;
+    }
 
 }
