--- a/css/styles.css
+++ b/css/styles.css
@@ -602,4 +602,7 @@ Sempre que alguem passar o mause vou estilizar o pararagrafo que esta dentro*/
         margin-bottom: 0;
     }
 
+    /*
+    testando hotfix
+    */
 }
